# fibertools-rs

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .release-please-manifest.json  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  INSTALL.md  LICENSE  NOTES.md  RANGES_BENCHMARK_RESULTS.md  README.md  VERIFICATION_REPORT.md  _config.yml  build.rs  dist-workspace.toml  env.yaml  release-please-config.json  release-plz.toml  release.sh  release.toml
.cargo/: config  config.toml
.github/ISSUE_TEMPLATE/: bug_report.md  enhancement.md
.github/workflows/: CI.yml  deploy.yml  publish-crates.yml  release-please.yml  release-plz.yml  release-python-ma.yml  release-python-pyft.yml  release.yml
.test/: aligned.bam.bai  all.bam.bai  center.bam  center.bam.bai  center.bed
FIRE/: FIRE.conf.json  FIRE.gbdt.json  make-training-data.sh  train-fire-model.py
Train-FIRE/: README.md  pixi.toml
Train-FIRE/.tests/: config.yaml
Train-FIRE/config/: config.yaml
Train-FIRE/workflow/: Snakefile
bamlift/: Cargo.toml
bamlift/src/: lib.rs
bamlift/tests/: test-liftover.rs
benches/: README.md  RESULTS.md  fetch-data.sh  predict_options_benchmark.rs  ranges_bench.rs  subcommands.rs
benches/2025-07-08-new-torch-version/: ft_0_17_1_pytorch.sh
benchmarks/2025-07-08-new-torch-version/: README.md  ft_0_12_pytorch.sh  ft_0_12_pytorch_wrapper.sh  ft_0_17_1_pytorch_factory_wrapper.sh  ft_0_17_1_pytorch_sequential_wrapper.sh  ft_0_17_1_pytorch_thread_local_wrapper.sh  ft_0_17_1_pytorch_wrapper.sh
bio-io/: CHANGELOG.md  Cargo.toml
bio-io/src/: lib.rs
docs/: auto-links.py  book.toml  center.md  extract.md  footprint.md  ft--help.md  ft-add-nucleosomes-help.md  ft-all-columns.md  ft-center-help.md  ft-clear-kinetics-help.md  ft-extract-help.md  ft-fire-help.md  ft-footprint-help.md  ft-pileup-help.md  ft-predict-m6a-help.md  ft-strip-basemods-help.md  ft-track-decorators-help.md  help.md  make_help_docs.sh
docs/src/: HOME.md  SUMMARY.md  cite.md  glossary.md  help.md  pyft.md  quick-start.md
models/: 2.0_semi_torch.json  2.0_semi_torch.pt  2.2_semi_torch.json  2.2_semi_torch.pt  2.2_torch.pt  3.2_semi_torch.json  3.2_semi_torch.pt  3.2_semi_torch.pt.onnx  FIRE.conf.json  FIRE.gbdt.json  Revio_semi_torch.2.json  Revio_semi_torch.2.pt  Revio_semi_torch.json  Revio_semi_torch.pt  convert-pt-to-onnx.py  convert_xgboost.py  gbdt_0.81_p2.0.json  gbdt_0.81_p2.2.json  gbdt_large.0.81.json  gbdt_large.0.81_p2.2.json  m6ANet_PS00075.best.torch.pt  m6ANet_other_half_hifi.3.best.torch.pt  train_xgboost.py
molecular-annotation/: .gitignore  CHANGELOG.md  Cargo.toml  README.md
molecular-annotation/docs/: mm-ml-per-group-passthrough.md
molecular-annotation/examples/: README.md  fiberseq_to_ma.rs
molecular-annotation/python/: Cargo.toml  DEV.md  README.md
molecular-annotation/python/molecular_annotation/: __init__.py  pysam_utils.py
molecular-annotation/python/src/: lib.rs
molecular-annotation/python/tests/: test_molecular_annotation.py
molecular-annotation/rust/: README.md
molecular-annotation/rust/src/basemods/: write.rs
molecular-annotation/spec/: AGENTS.md  README.md
molecular-annotation/src/: build.rs  coords.rs  decode.rs  iter.rs  lib.rs  liftover.rs  serialize.rs  tests.rs  types.rs
molecular-annotation/src/basemods/: mod.rs  parse.rs
molecular-annotation/src/types/: annotation.rs  annotation_type.rs  error.rs  mod.rs  primitives.rs  view.rs
molecular-annotation/test-data/: align.sh  ref.fa.gz.fai  ref.fa.gz.gzi  test.cram.crai
py-ft/: Cargo.toml  DEV-NOTES.md  README.md  example.py  pyproject.toml
py-ft/docs/: api.rst  conf.py  environment.yml  index.rst  modules.rst  py_ft.rst  pyft.rst  requirements.txt
py-ft/docs/_static/css/: rtd_dark.css
py-ft/docs/_templates/: layout.html
py-ft/docs/vignettes/: basic-usage-examples.ipynb  example.ipynb  index.rst  quickstart.rst
py-ft/examples/: example.ipynb  example.py
py-ft/python/pyft/: __init__.py  fiberdata.py  fiberplot.py  plot.py  utils.py
py-ft/python/pyft/tests/: test_fiberdata.py
py-ft/src/: fiberdata.rs  lib.rs
python/: Cargo.toml  DEV.md  README.md  pyproject.toml
python/molecular_annotation/: __init__.py  pysam_utils.py
python/src/: lib.rs
python/tests/: test_molecular_annotation.py
rust/: Cargo.toml
rust/examples/: fiberseq_to_ma.rs
rust/src/: lib.rs  liftover.rs  tests.rs  types.rs
src/: Basemods.rs  bamlift.rs  bamranges.rs  basemods.rs  bio_io.rs  center.rs  cli.rs  cnn.rs  ddda_to_m6a.rs  decorator.rs  extract.rs  fiber.rs  fire.rs  firetrack.rs  footprint.rs  lib.rs  main.rs  ml_models.rs  nucleosomes.rs  pileup.rs  predict_m6a.rs  strip_basemods.rs  subcommands.rs  utils.rs  xgb.rs
src/bamlift/: mod.rs
src/basemods/: mod.rs
src/bio_io/: mod.rs
src/cli/: benchmark_opts.rs  call_peaks_opts.rs  center_opts.rs  clear_kinetics_opts.rs  convert_tags_opts.rs  ddda_to_m6a_opts.rs  decorator_opts.rs  extract_opts.rs  fiber_fold_opts.rs  fiber_hmm.rs  fire_opts.rs  footprint_opts.rs  inject_opts.rs  mock_fire_opts.rs  nucleosome_opts.rs  pg_inject_opts.rs  pg_lift_opts.rs  pg_pansn_opts.rs  pileup_opts.rs  predict_opts.rs  qc_opts.rs  strip_basemods_opts.rs  validate_opts.rs
src/m6a_burn/: mod.rs  revio.onnx  three_two.onnx  two_two.onnx  two_zero.onnx
src/predict_m6a/: cnn.rs  mod.rs  xgb.rs
src/subcommands/: add_nucleosomes.rs  benchmark.rs  call_peaks.rs  center.rs  clear_kinetics.rs  convert_tags.rs  ddda_to_m6a.rs  decorator.rs  extract.rs  fiber_fold.rs  fiber_hmm.rs  fire.rs  footprint.rs  inject.rs  mock_fire.rs  nucleosomes.rs  pg_inject.rs  pg_lift.rs  pg_pansn.rs  pileup.rs  predict_m6a.rs  qc.rs  strip_basemods.rs  validate.rs
src/unused-code/: sorted_write.rs
src/utils/: acf.rs  bamannotations.rs  bamlift.rs  bamranges.rs  (+14 more)
test-data/: test.cram
tests/: basemods.rs  bio_io.rs  boundary_bug_test.rs  call_peaks_test.rs  coordinate_lift_test.rs  extract_test.rs  fibertig_test.rs  m6a_prediction_test.rs  molecular_annotation.rs  regression.rs  run_test.rs  test-decorator.sh
the-fibertools-book/: book.toml  make_help_docs.sh
(+88 files in other folders)
