[package]
authors = ["Mitchell R. Vollger <mrvollger@gmail.com>"]
build = "build.rs"
categories = ["command-line-utilities"]
description = "Fiber-seq toolkit in rust"
edition = "2021"
homepage = "https://fiberseq.github.io/fibertools-rs/"
keywords = ["cli", "bam", "bfx"]
license = "MIT"
name = "fibertools-rs"
readme = "README.md"
repository = "https://github.com/fiberseq/fibertools-rs"
version = "0.3.7"

[[bin]]
name = "ft"
path = "src/main.rs"

[dependencies]
anstyle = "1.0.0"
anyhow = "1.0.58"
bio = "1.2.0"
clap = {version = "4.4.6", features = ["cargo", "string", "wrap_help", "color", "unstable-styles", "derive"], optional = true}
clap_complete = {version = "4.0.6", optional = true}
clap_mangen = {version = "0.2.5", optional = true}
colored = "2.0.0"
console = {version = "0.15", optional = true}
env_logger = "0.9.0"
gbdt = {version = "0.1.1"}
indicatif = {version = "0.17.7", features = ["rayon"]}
itertools = "0.10.5"
lazy_static = "1.4.0"
log = "0.4"
ordered-float = "3.4.0"
rayon = "1.8"
regex = "1.9.1"
rust-htslib = "0.43"
serde = {version = "1.0.104", features = ["derive"], optional = false}
serde_json = {version = "1.0.48", optional = false}
serde_yaml = "0.9"
spin = "0.9.8"
tch = {version = "0.14.0", optional = true}
tempfile = "3.3.0"
derive_builder = "0.12.0"
gzp = "0.11.3"
niffler = {version = "2.5.0", default-features = false, features = ["gz"]}

[features]
cli = ["dep:clap", "dep:clap_complete", "dep:clap_mangen", "dep:console"]
default = ["cli"]
predict = ["dep:tch"]

# generated by 'cargo dist init'
[profile.dist]
debug = true
inherits = "release"
split-debuginfo = "packed"

#[build-dependencies]
#burn-import = "0.7.0"

[dev-dependencies]
assert_cmd = "2.0.11"
predicates = "3.0.3"

[profile.dev]
opt-level = 2

[profile.release]
codegen-units = 1
debug = true
lto = "thin"
