[package]
authors = ["Mitchell R. Vollger <mrvollger@gmail.com>"]
build = "build.rs"
categories = ["command-line-utilities"]
description = "Fiber-seq toolkit in rust"
edition = "2021"
homepage = "https://fiberseq.github.io/"
keywords = ["cli", "bam", "bfx"]
license = "MIT"
name = "fibertools-rs"
readme = "README.md"
repository = "https://github.com/fiberseq/fibertools-rs"
version = "0.8.0"
# exclude py-ft and test data from cargo publish since they are too large
exclude = ["py-ft/", "tests/data/"]

[workspace]
exclude = ["py-ft"]

[[bin]]
name = "ft"
path = "src/main.rs"

[dependencies]
anstyle = "1.0.0"
anyhow = "1.0.58"
bio = "1.2.0"
clap = { version = "4.4.6", features = [
    "cargo",
    "string",
    "wrap_help",
    "color",
    "unstable-styles",
    "derive",
    "env",
], optional = true }
clap_complete = { version = "4.0.6", optional = true }
clap_mangen = { version = "0.2.5", optional = true }
colored = "2.0.0"
console = { version = "0.15", optional = true }
duct = "1.1.0"
env_logger = "0.9.0"
gbdt = { version = "=0.1.3" }
indicatif = { version = "0.17.7", features = ["rayon"] }
itertools = "0.10.5"
lazy_static = "1.4.0"
log = "0.4"
ordered-float = "3.4.0"
rayon = "1.10"
linear-map = "1.2.0"
regex = "1.9.1"
rust-htslib = "0.46"
rust-lapper = "1.2.0"


serde = { version = "1.0.104", features = ["derive"], optional = false }
serde_json = { version = "1.0.48", optional = false }
serde_yaml = "0.9"
spin = "0.9.8"
tch = { version = "0.19.0", optional = true }
tempfile = "3.3.0"
derive_builder = "0.12.0"
gzp = "0.11.3"
niffler = { version = "2.5.0", default-features = false, features = ["gz"] }
burn = { version = "0.18.0", optional = true, features = [
    "candle",
    #"accelerate", can only be used with macos
] }
num = "0.4.3"
rand = "0.8.5"
noodles = { version = "0.100.0", features = ["fasta", "bed"] }
polars = { version = "0.51.0", features = ["csv", "decompress", "lazy"] }

[build-dependencies]
burn-import = { version = "0.18.0", default-features = false, features = [
    "onnx",
] }
vergen-git2 = { version = "1.0.2", features = [
    "build",
    "cargo",
    "rustc",
    "si",
] }


[dev-dependencies]
assert_cmd = "2.0.11"
predicates = "3.0.3"

[features]
cli = ["dep:clap", "dep:clap_complete", "dep:clap_mangen", "dep:console"]
default = ["cli", "burn"]
tch = ["dep:tch", "burn/tch"]
burn = ["dep:burn"]


# generated by 'cargo dist init'
[profile.dist]
inherits = "release"
split-debuginfo = "packed"

# generated by 'cargo wizard'
[profile.dev]
opt-level = 0
debug = 0

[profile.test]
opt-level = 2
inherits = "dev"
strip = "none"
lto = false
codegen-units = 256
incremental = true

[profile.release]
strip = "debuginfo"
codegen-units = 1
debug = false
lto = true
panic = "abort"
