[package]
authors = ["Mitchell R. Vollger <mrvollger@gmail.com>"]
categories = ["library"]
description = "Liftover positions in a BAM file"
edition = "2021"
keywords = ["bam", "bfx"]
license = "MIT"
name = "bamlift"
repository = "https://github.com/fiberseq/fibertools-rs"
version = "0.1.1"

[dependencies]
#bio = "1.2.0"
#lazy_static = "1.4.0"
#ordered-float = "3.4.0"
#rayon = "1.5"
env_logger = "0.9.0"
itertools = "0.10.5"
log = "0.4"
rust-htslib = "0.44.1"
