[package]
authors = ["Mitchell R. Vollger <mrvollger@gmail.com>"]
categories = ["library"]
description = "My utilities for reading and writing bioinformatics file formats"
edition = "2021"
keywords = ["bam", "bfx"]
license = "MIT"
name = "bio-io"
repository = "https://github.com/fiberseq/fibertools-rs"
version = "0.1.1"

[dependencies]
anyhow = "1.0.58"
colored = "2.0.0"
gzp = "0.11.3"
#indicatif = {version = "0.17.0", features = ["rayon"]}
#env_logger = "0.9.0"
itertools = "0.10.5"
lazy_static = "1.4.0"
log = "0.4"
niffler = {version = "2.5.0", default-features = false, features = ["gz"]}
regex = "1.5.4"
rust-htslib = "0.44.1"
