[package]
name = "molecular-annotation"
version = "0.1.0"
edition = "2021"
description = "Library for molecular annotations in SAM/BAM files"
license = "MIT"

[features]
htslib = ["dep:rust-htslib", "dep:regex", "dep:lazy_static", "dep:bio"]

[dependencies]
rust-htslib = { workspace = true, optional = true }
# Non-optional: core type management (build.rs) logs encoding-conflict warnings,
# so `log` must be available in every feature configuration.
log = "0.4"
regex = { version = "1", optional = true }
lazy_static = { version = "1", optional = true }
bio = { version = "2", optional = true }
smallvec = "1.15.1"

[dev-dependencies]
rust-htslib = { workspace = true }
