[package]
edition = "2021"
name = "pyft"
version = "0.1.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]
name = "pyft"

[dependencies]
anyhow = "1.0.58"
bamlift = {path = "../bamlift"}
bio-io = {path = "../bio-io"}
colored = "2.0.0"
env_logger = "0.10"
fibertools-rs = {path = "../", default-features = false}
itertools = "0.10.5"
lazy_static = "1.4.0"
log = "0.4"
pyo3 = "0.19.0"
regex = "1.5.4"
rust-htslib = "0.43.1"
