[package]
edition = "2021"
name = "pyft"
version = "0.2.3"

[lib]
crate-type = ["cdylib"]
name = "pyft"

[dependencies]
anyhow = "1.0.58"
colored = "2.0.0"
env_logger = "0.10"
fibertools-rs = {path = "../"}
itertools = "0.10.5"
lazy_static = "1.4.0"
log = "0.4"
pyo3 = "0.19.1"
regex = "1.9.1"
rust-htslib = "0.43"
