[build-system]
build-backend = "maturin"
requires = ["maturin>=1.1,<2.0"]

[project]
dynamic = ["version"]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
name = "pyft"
requires-python = ">=3.7"
dependencies = [
    "pandas>=2.0",
    "altair==5.5",
    "vegafusion[embed]",
    "tqdm",
    "typing-extensions",
    "polars",
]

[project.scripts]
fiberplot = "pyft.fiberplot:main"

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"

[tool.ruff]
extend-include = ["*.ipynb"]
