[build-system]
requires = ["maturin>=1.1,<2.0"]
build-backend = "maturin"

[project]
name = "molecular-annotation"
version = "0.1.0"
description = "Python bindings for molecular annotation tags in SAM/BAM/CRAM files"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Mitchell Vollger", email = "mrvollger@gmail.com"},
]
keywords = ["bioinformatics", "genomics", "SAM", "BAM", "CRAM", "molecular", "annotation"]
dependencies = [
    "pysam>=0.20",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.urls]
Homepage = "https://github.com/fiberseq/Molecular-annotation-spec"
Repository = "https://github.com/fiberseq/Molecular-annotation-spec"
Documentation = "https://github.com/fiberseq/Molecular-annotation-spec#readme"

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "."
module-name = "molecular_annotation._molecular_annotation"

[tool.pytest.ini_options]
testpaths = ["tests"]

# ---------------------------------------------------------------------------
# Pixi configuration (see https://pixi.sh)
# Run from `python/`:
#   pixi run build   # maturin develop into the pixi env
#   pixi run test    # build + pytest
# ---------------------------------------------------------------------------

[tool.pixi.workspace]
name = "molecular-annotation-py"
channels = ["conda-forge", "bioconda"]
platforms = ["osx-arm64", "osx-64", "linux-64"]

[tool.pixi.dependencies]
python = ">=3.10,<3.13"
maturin = ">=1.1,<2"
pip = "*"
pytest = ">=7"
pysam = ">=0.20"

[tool.pixi.pypi-dependencies]
molecular-annotation = { path = ".", editable = true }

[tool.pixi.tasks]
build = "maturin develop --release"
test = { cmd = "pytest tests/ -v", depends-on = ["build"] }
test-fast = "pytest tests/ -v"