[package]
name = "molecular-annotation-py"
version = "0.1.0"
edition = "2021"

[lib]
name = "_molecular_annotation"
crate-type = ["cdylib"]

[dependencies]
# The `mmml` feature enables the htslib-free MM/ML codec (parse/emit over byte
# slices) so the bindings can decode base modifications from pysam-supplied
# data without pulling in rust-htslib.
molecular-annotation = { path = "..", features = ["mmml"] }
pyo3 = { version = "0.22", features = ["extension-module", "abi3-py38"] }

# This crate is intentionally excluded from the repo-root workspace (it is a
# maturin-built cdylib extension module). Declaring an empty workspace table
# pins it as its own workspace root, so building it directly with maturin does
# not walk up to the root Cargo.toml and fail workspace resolution.
[workspace]
